--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.7.7
 entrypoints==0.2.3        # via nbconvert
 first==2.0.1              # via pip-tools
 fuzzywuzzy==0.16.0
+graphviz==0.8.2
 html5lib==1.0.1           # via bleach
 ipykernel==4.7.0          # via ipywidgets, jupyter, jupyter-console, notebook, qtconsole
 ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
