--- a/requirements.txt
+++ b/requirements.txt
@@ -5,22 +5,24 @@
 #    pip-compile --output-file requirements.txt setup.py
 #
 bleach==2.1.2             # via nbconvert
-click==6.7                # via pip-tools
+category-encoders==1.2.5
+click==6.7                # via flask, pip-tools
 cycler==0.10.0            # via matplotlib
 decorator==4.1.2          # via ipython, traitlets
-django==2.0.1
-djangorestframework==3.7.7
 entrypoints==0.2.3        # via nbconvert
 first==2.0.1              # via pip-tools
+flask==0.12.2
 fuzzywuzzy==0.16.0
 graphviz==0.8.2
+gunicorn==19.7.1
 html5lib==1.0.1           # via bleach
 ipykernel==4.7.0          # via ipywidgets, jupyter, jupyter-console, notebook, qtconsole
 ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
 ipython==6.2.1            # via ipykernel, ipywidgets, jupyter-console
 ipywidgets==7.1.0         # via jupyter
+itsdangerous==0.24        # via flask
 jedi==0.11.1              # via ipython
-jinja2==2.10              # via nbconvert, notebook
+jinja2==2.10              # via flask, nbconvert, notebook
 jsonschema==2.6.0         # via nbformat
 jupyter-client==5.2.1     # via ipykernel, jupyter-console, notebook, qtconsole
 jupyter-console==5.2.0    # via jupyter
@@ -36,28 +38,33 @@ numpy==1.14.0
 pandas==0.22.0
 pandocfilters==1.4.2      # via nbconvert
 parso==0.1.1              # via jedi
+patsy==0.4.1              # via category-encoders, statsmodels
+peewee==2.10.2
 pexpect==4.3.1            # via ipython
 pickleshare==0.7.4        # via ipython
 pip-tools==1.11.0
 prompt-toolkit==1.0.15    # via ipython, jupyter-console
+psycopg2==2.7.3.2
 ptyprocess==0.5.2         # via pexpect, terminado
 pycountry==17.9.23
 pygments==2.2.0           # via ipython, jupyter-console, nbconvert, qtconsole
 pyparsing==2.2.0          # via matplotlib
 python-dateutil==2.6.1
 python-levenshtein==0.12.0
-pytz==2017.3              # via django, matplotlib, pandas
+pytz==2017.3              # via matplotlib, pandas
 pyzmq==16.0.3             # via jupyter-client
 qtconsole==4.3.1          # via jupyter
 scikit-learn==0.19.1
 scipy==1.0.0
 seaborn==0.8.1
 simplegeneric==0.8.1      # via ipython
-six==1.11.0               # via bleach, cycler, html5lib, matplotlib, pip-tools, prompt-toolkit, python-dateutil, traitlets
+six==1.11.0               # via bleach, cycler, html5lib, matplotlib, patsy, pip-tools, prompt-toolkit, python-dateutil, traitlets
+statsmodels==0.8.0        # via category-encoders
 terminado==0.8.1          # via notebook
 testpath==0.3.1           # via nbconvert
 tornado==4.5.3            # via ipykernel, notebook, terminado
 traitlets==4.3.2          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, qtconsole
 wcwidth==0.1.7            # via prompt-toolkit
 webencodings==0.5.1       # via html5lib
+werkzeug==0.14.1          # via flask
 widgetsnbextension==3.1.0  # via ipywidgets
