--- a/docker-compose/local/docker-compose.yml
+++ b/docker-compose/local/docker-compose.yml
@@ -2,4 +2,8 @@ version: '2'
 
 services:
   postgres:
-    image: postgres:9.6
+    image: postgres:10.1
+    ports:
+      - "127.0.0.1:5432:5432"
+    environment:
+      POSTGRES_PASSWORD: bestpwd
